Added flash eeprom emulation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,8 @@ cmake_minimum_required(VERSION 3.17)
 
 message (STATUS "CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE}")
 
-if ( CMAKE_BUILD_TYPE STREQUAL "Debug")
   set (LOGGER "RTT")
   message (STATUS "RTT logger active")
-else()
-  message (STATUS "No RTT")
-endif()
 set (FAMILY "rp2040")
 set (PROJECT "yaumataca")
 set (PICO_SDK_PATH "${CMAKE_SOURCE_DIR}/pico-sdk")
@@ -40,7 +36,9 @@ target_include_directories(${PROJECT} PUBLIC
 # See the corresponding function in hw/bsp/FAMILY/family.cmake for details.
 family_configure_host_example(${PROJECT} noos)
 
-target_link_libraries(${PROJECT} PRIVATE pico_stdlib hardware_pio)
+target_link_libraries(${PROJECT} PRIVATE
+  pico_stdlib hardware_pio hardware_flash
+)
 
 pico_generate_pio_header(${PROJECT} ${CMAKE_CURRENT_LIST_DIR}/pio/c1351.pio)
 pico_add_extra_outputs(${PROJECT})
