Unit tests Fixed unit tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,8 +4,28 @@ project(unittest C CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 
+set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${PROJECT_SOURCE_DIR}/cmake")
 
 enable_testing()
+
+# Code coverage -----
+
+set(covname cov.info)
+add_compile_options(-fprofile-arcs -ftest-coverage)
+add_link_options(--coverage)
+add_custom_target(cov
+    COMMAND ${CMAKE_BINARY_DIR}/unittest
+    COMMAND lcov -c -o ${covname} -d . -b .
+    COMMAND lcov -r ${covname} '*/test/*' '/usr/include/*' -o ${covname}
+    COMMAND genhtml ${covname} -output coverage
+    DEPENDS unittest
+)
+set_directory_properties(PROPERTIES
+    ADDITIONAL_CLEAN_FILES ${covname}
+)
+
+# ---------------------
+
 
 add_executable(unittest
     ${CMAKE_CURRENT_SOURCE_DIR}/test_pipeline.cpp
@@ -26,4 +46,5 @@ target_link_libraries(
 include(GoogleTest)
 
 gtest_discover_tests(unittest) # discovers tests by asking the compiled test executable to enumerate its tests
+
 
