Added additional mouse swap mode
Controller port swapping can now
also be performed using 2 buttons instead of all 3.
This should help with 2 button mice.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,7 +86,8 @@
         "stdint.h": "c",
         "stdbool.h": "c",
         "ctype.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "*.in": "cpp"
     },
     "C_Cpp.default.compilerPath": "/usr/bin/arm-none-eabi-gcc",
     "editor.formatOnSave": true,
