Added DragonInc Hizue pad
Thanks to Spacepilot3000 for providing report data

Also removed subfolders from release file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ target_sources(${PROJECT} PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}/src/handlers/hid_switch_pro.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/handlers/hid_ps3.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/handlers/hid_ps4.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/handlers/hid_hizue.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/processors/mouse_c1351.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/handlers/bare_xbox_one.cpp
