Added Final Cart III hack
The FC3 module muxes both controller
ports to the POT lines of the SID.
It is incompatible with two mice
and the way, the Yaumataca simulates
a C1351. This hack enforces to "let go"
of these lines which indirectly might
cause issues with C64 games that support
additional fire buttons.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ message (STATUS "CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE}")
 
 option(CONFIG_DEBUG_PRINT "Activate debug prints on RTT")
 option(CONFIG_SWAP2BUTTON "Activate swapping controller ports with only left and right mouse button pressed")
+option(CONFIG_FORCE_MOUSE_BOOT_MODE "Disable HID report parsing. Disable Wheel")
 
 if (CONFIG_DEBUG_PRINT)
   set (LOGGER "RTT")
