--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ message (STATUS "CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE}")
 option(CONFIG_DEBUG_PRINT "Activate debug prints on RTT")
 option(CONFIG_SWAP2BUTTON "Activate swapping controller ports with only left and right mouse button pressed")
 option(CONFIG_FORCE_MOUSE_BOOT_MODE "Disable HID report parsing. Disable Wheel")
+option(CONFIG_DISABLE_AMIGA_WHEELBUSMOUSE "Disables wheel mode, which affects other controller port")
 
 if (CONFIG_DEBUG_PRINT)
   set (LOGGER "RTT")
