Change of boot up configuration
Primary mouse port now starts as a mouse.
Previously everything started as a joystick.
Fixes Final Cart III after power cycle as the desktop
mode is searching for a mouse.

Also cleanup of debugging output

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -87,7 +87,14 @@
         "stdbool.h": "c",
         "ctype.h": "c",
         "stdlib.h": "c",
-        "*.in": "cpp"
+        "*.in": "cpp",
+        "csignal": "cpp",
+        "hash_map": "cpp",
+        "charconv": "cpp",
+        "source_location": "cpp",
+        "format": "cpp",
+        "shared_mutex": "cpp",
+        "stdfloat": "cpp"
     },
     "C_Cpp.default.compilerPath": "/usr/bin/arm-none-eabi-gcc",
     "editor.formatOnSave": true,
