Added support for Xbox 360 Wireless Receiver
Thanks to quadflyer8 for providing testing hardware

Two Xbox 360 Wireless controllers are supported
at the same time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ target_sources(${PROJECT} PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/processors/mouse_c1351.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/handlers/bare_xbox_one.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/src/handlers/bare_xbox360_wireless.cpp
 )
 
 target_include_directories(${PROJECT} PUBLIC
